MDEV-5093, MDEV-5094: - Make EXPLAIN {PARTITIONS,EXTENDED} {UPDATE,DELETE} work.